--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@splidejs/vue-splide": "^0.3.5",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "swiper": "^7.0.6",
     "vue": "^3.0.0",
-    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
   },
