--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.11",
+    "vue3-carousel": "^0.1.27",
+    "vue3-smooth-scroll": "^0.8.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
