--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@dafcoe/vue-collapsible-panel": "^0.2.0",
     "@splidejs/vue-splide": "^0.3.5",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
