--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.11",
+    "vue-the-mask": "^0.11.1",
     "vue3-carousel": "^0.1.27",
     "vue3-smooth-scroll": "^0.8.1",
     "vuex": "^4.0.2"
