--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-meta": "^2.4.0",
     "vue-router": "^4.0.11",
     "vue-the-mask": "^0.11.1",
     "vue3-carousel": "^0.1.27",
