--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@dafcoe/vue-collapsible-panel": "^0.2.0",
     "@splidejs/vue-splide": "^0.3.5",
+    "@vueuse/head": "^0.6.0",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
