--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-the-mask": "^0.11.1",
     "vue3-carousel": "^0.1.27",
     "vue3-smooth-scroll": "^0.8.1",
+    "vue3-youtube": "^0.1.9",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
