--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vueuse/head": "^0.6.0",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "puppeteer": "^13.0.1",
     "vue": "^3.0.0",
     "vue-meta": "^3.0.0-alpha.9",
     "vue-router": "^4.0.11",
@@ -30,6 +31,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "prerender-spa-plugin": "^3.0.0-beta.2",
     "vue-cli-plugin-sitemap": "~2.3.0"
   },
   "eslintConfig": {
