--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "puppeteer": "^13.0.1",
     "vue": "^3.0.0",
     "vue-meta": "^3.0.0-alpha.9",
+    "vue-recaptcha-v3": "^2.0.1",
     "vue-router": "^4.0.11",
     "vue-the-mask": "^0.11.1",
     "vue3-carousel": "^0.1.27",
